terragrunt/eks-AmazonQ/7-eks.tf
# # Data sources
# data "aws_caller_identity" "current" {}

# data "aws_availability_zones" "available" {
#   state = "available"
# }


# data "aws_ami" "eks_worker" {
#   filter {
#     name   = "name"
#     values = ["amazon-eks-node-${aws_eks_cluster.main.version}-v*"]
#   }
#   most_recent = true
#   owners      = ["602401143452"] # Amazon EKS AMI Account ID
# }



# # EKS Cluster
# resource "aws_eks_cluster" "main" {
#   name     = var.cluster_name
#   role_arn = aws_iam_role.cluster.arn
#   version  = "1.28"

#   vpc_config {
#     subnet_ids              = concat(aws_subnet.private[*].id, aws_subnet.public[*].id)
#     endpoint_private_access = true
#     endpoint_public_access  = true
#     security_group_ids      = [aws_security_group.cluster.id]
#   }

#   encryption_config {
#     provider {
#       key_arn = var.kms_key_arn
#     }
#     resources = ["secrets"]
#   }

#   enabled_cluster_log_types = ["api", "audit", "authenticator", "controllerManager", "scheduler"]

#   depends_on = [
#     aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy,
#   ]

#   tags = {
#     Name = var.cluster_name
#   }

# }


# # Launch Template
# resource "aws_launch_template" "node_group" {
#   name_prefix   = "${var.cluster_name}-node-group-"
#   image_id      = data.aws_ami.eks_worker.id
#   # instance_type = var.instance_types[0]
#   key_name      = var.key_pair_name != "" ? var.key_pair_name : null

#   vpc_security_group_ids = [aws_security_group.node_group.id]

#   block_device_mappings {
#     device_name = "/dev/xvda"
#     ebs {
#       volume_size           = var.volume_size
#       volume_type           = "gp3"
#       encrypted             = true
#       kms_key_id            = var.kms_key_arn
#       delete_on_termination = true
#     }
#   }

#   metadata_options {
#     http_endpoint               = "enabled"
#     http_tokens                 = "required"
#     http_put_response_hop_limit = 2
#     instance_metadata_tags      = "enabled"
#   }

#   monitoring {
#     enabled = true
#   }

#   user_data = base64encode(templatefile("${path.module}/userdata.sh", {
#     cluster_name = aws_eks_cluster.main.name
#     endpoint     = aws_eks_cluster.main.endpoint
#     ca_data      = aws_eks_cluster.main.certificate_authority[0].data
#   }))

#   tag_specifications {
#     resource_type = "instance"
#     tags = {
#       Name                                        = "${var.cluster_name}-node"
#       "kubernetes.io/cluster/${var.cluster_name}" = "owned"
#     }
#   }

#   tag_specifications {
#     resource_type = "volume"
#     tags = {
#       Name                                        = "${var.cluster_name}-node-volume"
#       "kubernetes.io/cluster/${var.cluster_name}" = "owned"
#       Encrypted                                   = "true"
#     }
#   }

#   tags = {
#     Name = "${var.cluster_name}-node-group-template"
#   }

#   depends_on = [aws_kms_key_policy.existing_key_complete_policy]
# }

# # EKS Managed Node Group
# resource "aws_eks_node_group" "main" {
#   cluster_name    = aws_eks_cluster.main.name
#   node_group_name = var.node_group_name
#   node_role_arn   = aws_iam_role.node_group.arn
#   subnet_ids      = aws_subnet.private[*].id
#   instance_types  = var.instance_types

#   launch_template {
#     id      = aws_launch_template.node_group.id
#     version = aws_launch_template.node_group.latest_version
#   }

#   scaling_config {
#     desired_size = var.desired_capacity
#     max_size     = var.max_capacity
#     min_size     = var.min_capacity
#   }

#   update_config {
#     max_unavailable = 1
#   }

#   # Ensure that IAM Role permissions are created before and deleted after EKS Node Group handling.
#   # Otherwise, EKS will not be able to properly delete EC2 Instances and Elastic Network Interfaces.
#   depends_on = [
#     aws_iam_role_policy_attachment.node_group_AmazonEKSWorkerNodePolicy,
#     aws_iam_role_policy_attachment.node_group_AmazonEKS_CNI_Policy,
#     aws_iam_role_policy_attachment.node_group_AmazonEC2ContainerRegistryReadOnly,
#     aws_iam_role_policy.node_group_kms,
#     aws_kms_key_policy.existing_key_complete_policy,
#   ]

#   tags = {
#     Name = "${var.cluster_name}-${var.node_group_name}"
#   }
# }
